--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 VITE_ECHO_API_URL = "https://api.stability.ai/v2beta/stable-image/generate/core"
-VITE_ECHO_API_KEY = "sk-NQAOypLpUk54oS2XW3iJ3FftFC5xgcv4FhyhezkI5GTLzQOX"
+VITE_ECHO_API_KEY = "insert your api key here"
