--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@tailwindcss/vite": "^4.0.12",
     "axios": "^1.8.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-spinners": "^0.15.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
